--- a/package.json
+++ b/package.json
@@ -17,9 +17,27 @@
   },
   "homepage": "https://github.com/screeny05/tedra.tech#readme",
   "devDependencies": {
+    "@types/throttle-debounce": "^2.1.0",
+    "autoprefixer": "^9.6.1",
+    "css-loader": "^3.2.0",
+    "extract-loader": "^3.1.0",
+    "file-loader": "^4.2.0",
+    "html-webpack-inline-svg-plugin": "^1.2.4",
+    "html-webpack-plugin": "^3.2.0",
+    "node-sass": "^4.12.0",
     "parcel": "^1.12.3",
+    "postcss-loader": "^3.0.0",
     "sass": "^1.22.2",
-    "typescript": "^3.5.2"
+    "sass-loader": "^8.0.0",
+    "script-ext-html-webpack-plugin": "^2.1.4",
+    "style-ext-html-webpack-plugin": "^4.1.2",
+    "style-loader": "^1.0.0",
+    "svg-inline-loader": "^0.8.0",
+    "ts-loader": "^6.1.2",
+    "twig-loader": "^0.5.1",
+    "typescript": "^3.6.3",
+    "webpack": "^4.41.0",
+    "webpack-cli": "^3.3.9"
   },
   "dependencies": {
     "throttle-debounce": "^2.1.0"
