--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "https://www.tedra.tech/",
   "main": "index.js",
   "scripts": {
-    "build": "parcel build src/index.html -o dist/index.html"
+    "build": "parcel build src/index.html -o dist/index.html",
+    "dev": "parcel serve src/index.html"
   },
   "repository": {
     "type": "git",
