--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "homepage": "https://github.com/screeny05/tedra.tech#readme",
   "devDependencies": {
-    "parcel": "^1.12.4",
+    "parcel-bundler": "^1.12.4",
     "sass": "^1.26.10",
     "typescript": "^3.9.7"
   },
