--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "url": "git+https://github.com/screeny05/tedra.tech.git"
   },
   "author": "Sebastian Langer <sl@scn.cx>",
-  "license": "MIT",
+  "license": "agpl-3.0",
   "bugs": {
     "url": "https://github.com/screeny05/tedra.tech/issues"
   },
