--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
   },
   "homepage": "https://github.com/screeny05/tedra.tech#readme",
   "devDependencies": {
-    "parcel-bundler": "^1.12.4",
-    "sass": "^1.26.10",
-    "typescript": "^3.9.7"
+    "@types/throttle-debounce": "^5.0.0",
+    "parcel-bundler": "^1.12.5",
+    "sass": "^1.51.0",
+    "typescript": "^4.6.4"
   },
   "dependencies": {
-    "throttle-debounce": "^2.2.1"
+    "throttle-debounce": "^5.0.0"
   }
 }
