--- a/package.json
+++ b/package.json
@@ -1,29 +1,29 @@
 {
-  "name": "tedra.tech",
-  "version": "1.0.0",
-  "description": "https://www.tedra.tech/",
-  "main": "index.js",
+  "name": "@example/basics",
+  "type": "module",
+  "version": "0.0.1",
+  "private": true,
   "scripts": {
-    "build": "parcel build src/index.html -o dist/index.html --public-url https://tedra.tech/",
-    "dev": "parcel serve src/index.html"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/screeny05/tedra.tech.git"
-  },
-  "author": "Sebastian Langer <sl@scn.cx>",
-  "license": "agpl-3.0",
-  "bugs": {
-    "url": "https://github.com/screeny05/tedra.tech/issues"
-  },
-  "homepage": "https://github.com/screeny05/tedra.tech#readme",
-  "devDependencies": {
-    "@types/throttle-debounce": "^5.0.0",
-    "parcel-bundler": "^1.12.5",
-    "sass": "^1.51.0",
-    "typescript": "^4.6.4"
+    "dev": "astro dev",
+    "start": "astro dev",
+    "build": "astro build",
+    "preview": "astro preview",
+    "astro": "astro"
   },
   "dependencies": {
-    "throttle-debounce": "^5.0.0"
+    "@astrojs/netlify": "^1.3.0",
+    "@astrojs/preact": "^1.2.0",
+    "@nanostores/preact": "^0.3.1",
+    "@paypal/react-paypal-js": "^7.8.2",
+    "@types/toastify-js": "^1.11.1",
+    "astro": "^1.8.0",
+    "autoprefixer": "^10.4.13",
+    "cssnano": "^5.1.14",
+    "framer-motion": "^8.0.2",
+    "nanostores": "^0.7.1",
+    "preact": "^10.11.3",
+    "react-modal-sheet": "^1.9.0",
+    "sass": "^1.57.1",
+    "toastify-js": "^1.12.0"
   }
 }
