--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
     "preact": "^10.11.3",
     "react-modal-sheet": "^1.9.0",
     "sass": "^1.57.1",
+    "throttle-debounce": "^5.0.0",
     "toastify-js": "^1.12.0"
+  },
+  "devDependencies": {
+    "@types/throttle-debounce": "^5.0.0"
   }
 }
