--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
     "@astrojs/preact": "^1.2.0",
     "@nanostores/preact": "^0.3.1",
     "@paypal/react-paypal-js": "^7.8.2",
+    "@swup/head-plugin": "^1.3.0",
+    "@swup/overlay-theme": "^1.1.1",
+    "@swup/preload-plugin": "^2.0.2",
+    "@swup/scroll-plugin": "^2.0.1",
+    "@swup/slide-theme": "^1.0.5",
     "@types/toastify-js": "^1.11.1",
     "astro": "^1.8.0",
     "astro-icon": "^0.8.0",
@@ -24,6 +29,7 @@
     "preact": "^10.11.3",
     "react-modal-sheet": "^1.9.0",
     "sass": "^1.57.1",
+    "swup": "^3.0.4",
     "throttle-debounce": "^5.0.0",
     "toastify-js": "^1.12.0"
   },
